fix: tweak spacing to match Asana comment

--- a/src/components/dev-dot-content/mdx-components/mdx-try-hcp-callout/mdx-try-hcp-callout.module.css
+++ b/src/components/dev-dot-content/mdx-components/mdx-try-hcp-callout/mdx-try-hcp-callout.module.css
@@ -1,3 +1,7 @@
 .spacing {
-	margin: 24px 0 32px 0;
+	margin: 24px 0;
+
+	@media (--dev-dot-tablet-up) {
+		margin: 32px 0;
+	}
 }
